--- a/_posts/artists/0012-01-01-irukanji.md
+++ b/_posts/artists/0012-01-01-irukanji.md
@@ -25,7 +25,7 @@ permalink: artist/irukanji/
 <!-- <iframe src="//coub.com/embed/6zz38?muted=false&autostart=false&originalSize=false&hideTopBar=false&startWithHD=true" allowfullscreen="true" frameborder="0" width="480" height="270"></iframe>
  -->
 
-<p>Electronic psychedelic music project from Kyiv, Ukraine</p>
+<!-- <p>Electronic psychedelic music project from Kyiv, Ukraine</p>
 
 <div class="embed-responsive embed-responsive-4by3">
 	<iframe class="embed-responsive-item" src="//coub.com/embed/6zz38?muted=false&autostart=false&originalSize=false&hideTopBar=false&startWithHD=true"></iframe>
@@ -33,4 +33,4 @@ permalink: artist/irukanji/
 
 <div class="embed-responsive embed-responsive-4by3">
 	<iframe class="embed-responsive-item" src="//coub.com/embed/3hy04?muted=false&autostart=false&originalSize=false&hideTopBar=false&startWithHD=true"></iframe>
-</div>
+</div> -->
