add soc links to nav-top

--- a/_posts/artists/0012-01-01-irukanji.md
+++ b/_posts/artists/0012-01-01-irukanji.md
@@ -17,7 +17,7 @@ discogs: 1375976-Irukanji
 coub: irukanji.music
 
 category: artists
-permalink: artist/irukanji/
+permalink: artist/:title
 
 ---
 
