add artists photos

--- a/_posts/artists/0011-01-01-shiva3.md
+++ b/_posts/artists/0011-01-01-shiva3.md
@@ -1,17 +1,17 @@
 ---
 layout: artist
+category: artists
+permalink: artist/:title
+photo: shiva3
 title: Shiva3
-url-id: shiva3
-meta: Shiva3
-keywords: Shiva3
 
 name: Averin Andrey
 location: Crimea, Ukraine
-soundcloud-id: 
 
-category: artists
-permalink: artist/:title
-
+website: 
+bandcamp: 
+facebook: 
+soundcloud: 
+discogs: 
+coub: 
 ---
-
-
