--- a/_posts/artists/0012-01-01-irukanji.md
+++ b/_posts/artists/0012-01-01-irukanji.md
@@ -1,36 +1,17 @@
 ---
 layout: artist
+category: artists
+permalink: artist/:title
+photo: irukanji
 title: Irukanji
-url-id: irukanji
-meta: Irukanji
-keywords: Irukanji
 
 name: Ihor Orlovskyi
 location: Kyiv, Ukraine
 
-website: irukanji-music.com
-bandcamp: irukanji
-facebook: irukanji.music
-soundcloud-id: 5771025
-soundcloud: irukanji-music
-discogs: 1375976-Irukanji
-coub: irukanji.music
-
-category: artists
-permalink: artist/:title
-
+website: 
+bandcamp: 
+facebook: 
+soundcloud: 
+discogs: 
+coub: 
 ---
-
-
-<!-- <iframe src="//coub.com/embed/6zz38?muted=false&autostart=false&originalSize=false&hideTopBar=false&startWithHD=true" allowfullscreen="true" frameborder="0" width="480" height="270"></iframe>
- -->
-
-<!-- <p>Electronic psychedelic music project from Kyiv, Ukraine</p>
-
-<div class="embed-responsive embed-responsive-4by3">
-	<iframe class="embed-responsive-item" src="//coub.com/embed/6zz38?muted=false&autostart=false&originalSize=false&hideTopBar=false&startWithHD=true"></iframe>
-</div>
-
-<div class="embed-responsive embed-responsive-4by3">
-	<iframe class="embed-responsive-item" src="//coub.com/embed/3hy04?muted=false&autostart=false&originalSize=false&hideTopBar=false&startWithHD=true"></iframe>
-</div> -->
