--- a/_posts/artists/0010-01-01-calamus.md
+++ b/_posts/artists/0010-01-01-calamus.md
@@ -1,17 +1,17 @@
 ---
 layout: artist
+category: artists
+permalink: artist/:title
+photo: calamus
 title: Calamus
-url-id: calamus
-meta: Calamus
-keywords: Calamus
 
 name: Vasily Sagaydak
 location: Odesa, Ukraine
-soundcloud-id: 
 
-category: artists
-permalink: artist/:title
-
+website: 
+bandcamp: 
+facebook: 
+soundcloud: 
+discogs: 
+coub: 
 ---
-
-
