--- a/_posts/artists/0010-01-01-neirula.md
+++ b/_posts/artists/0010-01-01-neirula.md
@@ -1,17 +1,17 @@
 ---
 layout: artist
+category: artists
+permalink: artist/:title
+photo: neirula
 title: NeiRula
-url-id: neirula
-meta: NeiRula
-keywords: NeiRula
 
 name: Yulia Levchenko
 location: Kyiv, Ukraine
-soundcloud-id: 
 
-category: artists
-permalink: artist/:title
-
+website: 
+bandcamp: 
+facebook: 
+soundcloud: 
+discogs: 
+coub: 
 ---
-
-
