fix all posts permalinks and ids

--- a/_posts/artists/0010-01-01-calamus.md
+++ b/_posts/artists/0010-01-01-calamus.md
@@ -1,9 +1,7 @@
 ---
-layout: artist
+layout: item-artists
 category: artists
-permalink: artist/:title
 
-photo: calamus
 title: Calamus
 
 name: Vasily Sagaydak
