--- a/_posts/artists/0010-01-01-neirula.md
+++ b/_posts/artists/0010-01-01-neirula.md
@@ -1,9 +1,7 @@
 ---
-layout: artist
+layout: item-artists
 category: artists
-permalink: artist/:title
 
-photo: neirula
 title: NeiRula
 
 name: Yulia Levchenko
