--- a/_posts/artists/0011-01-01-shiva3.md
+++ b/_posts/artists/0011-01-01-shiva3.md
@@ -1,9 +1,7 @@
 ---
-layout: artist
+layout: item-artists
 category: artists
-permalink: artist/:title
 
-photo: shiva3
 title: Shiva3
 
 name: Averin Andrey
