--- a/_posts/pages/0001-01-01-friends.md
+++ b/_posts/pages/0001-01-01-friends.md
@@ -13,25 +13,26 @@ permalink: /friends/
   <div class="friends-list">
   {% for friends in site.categories.friends %}
     <div class="friend-item">
+      <div class="content">
+        <div class="title">{{ friends.title }}</div>
 
-      <div class="friend-item_title">{{ friends.title }}</div>
+        {% if friends.site %}
+          <a href="{{ friends.site }}">site</a>
+        {% endif %}
 
-      {% if friends.site %}
-        <a href="{{ friends.site }}">site</a><br>
-      {% endif %}
+        {% if friends.bandcamp %}
+          <a href="{{ friends.bandcamp }}"><span class="icon-bandcamp"></span></a>
+        {% endif %}
+    
+        {% if friends.facebook %}
+          <a href="{{ friends.facebook }}"><span class="icon-facebook"></span></a>
+        {% endif %}
 
-      {% if friends.bandcamp %}
-        <a href="{{ friends.bandcamp }}">bandcamp</a><br>
-      {% endif %}
-  
-      {% if friends.facebook %}
-        <a href="{{ friends.facebook }}">facebook</a><br>
-      {% endif %}
+        {% if friends.soundcloud %}
+          <a href="{{ friends.soundcloud }}"><span class="icon-soundcloud"></span></a>
+        {% endif %}
 
-      {% if friends.soundcloud %}
-        <a href="{{ friends.soundcloud }}">soundcloud</a>
-      {% endif %}
-
+      </div>
     </div>
   {% endfor %}
   </div>
