--- a/_posts/pages/0001-01-01-friends.md
+++ b/_posts/pages/0001-01-01-friends.md
@@ -17,7 +17,7 @@ permalink: /friends/
         <div class="title">{{ friends.title }}</div>
 
         {% if friends.site %}
-          <a href="{{ friends.site }}">site</a>
+          <a href="{{ friends.site }}"><span class="icon-public"></span></a>
         {% endif %}
 
         {% if friends.bandcamp %}
