--- a/_posts/artists/0012-01-01-irukanji.md
+++ b/_posts/artists/0012-01-01-irukanji.md
@@ -7,10 +7,10 @@ title: Irukanji
 name: Ihor Orlovskyi
 location: Kyiv, Ukraine
 
-website: 
-bandcamp: 
-facebook: 
-soundcloud: 
-discogs: 
-coub: 
+website: http://irukanji-music.com
+bandcamp: https://irukanji.bandcamp.com
+facebook: https://www.facebook.com/irukanji.music
+soundcloud: https://soundcloud.com/irukanji-music
+soundcloud-id: 5771025
+discogs: http://www.discogs.com/artist/1375976-Irukanji
 ---
