add lazyload and isotop sorting to artists

--- a/_posts/artists/0010-01-01-calamus.md
+++ b/_posts/artists/0010-01-01-calamus.md
@@ -4,6 +4,7 @@ permalink: /calamus/
 category: artists
 
 title: Calamus
+filterStyle: darktrance
 
 name: Vasily Sagaydak
 location: Odesa, Ukraine
