content upd :dolphin:

--- a/_posts/artists/0011-01-01-shiva3.md
+++ b/_posts/artists/0011-01-01-shiva3.md
@@ -1,5 +1,5 @@
 ---
-layout: ArtistItem
+layout: artist-page
 permalink: /artist/shiva3/
 category: artists
 
@@ -12,7 +12,7 @@ location: Crimea, Ukraine
 
 website: 
 bandcamp: 
-facebook: 
+facebook: https://www.facebook.com/ShivaOmArtist
 soundcloud: https://soundcloud.com/shiva3
 soundcloud-id: 3035661
 discogs: 
