--- a/_posts/artists/0012-01-01-irukanji.md
+++ b/_posts/artists/0012-01-01-irukanji.md
@@ -1,5 +1,5 @@
 ---
-layout: ArtistItem
+layout: artist-page
 permalink: /artist/irukanji/
 category: artists
 
@@ -10,7 +10,7 @@ filterStyle: chillout
 name: Ihor Orlovskyi
 location: Kyiv, Ukraine
 
-website: http://irukanji-music.com
+website: https://irukanji-music.com
 bandcamp: https://irukanji.bandcamp.com
 facebook: https://www.facebook.com/irukanji.music
 soundcloud: https://soundcloud.com/irukanji-music
