--- a/_posts/artists/0010-01-01-neirula.md
+++ b/_posts/artists/0010-01-01-neirula.md
@@ -1,5 +1,5 @@
 ---
-layout: ArtistItem
+layout: artist-page
 permalink: /artist/neirula/
 category: artists
 
@@ -12,7 +12,7 @@ location: Kyiv, Ukraine
 
 website: 
 bandcamp: 
-facebook: 
+facebook: https://www.facebook.com/NeiRula
 soundcloud: https://soundcloud.com/dj-zea
 soundcloud-id: 542110
 discogs: 
