--- a/_posts/releases/2010-06-15-va-grower.md
+++ b/_posts/releases/2010-06-15-va-grower.md
@@ -7,6 +7,8 @@ title: VA «Grower»
 filterLabel: lookinglook
 filterStyle: chillout
 filterFormat: compilation
+cover: true
+cat_no: sencd018
 
 bandcamp-id: 4231998669
 bandcamp: https://lookinglook.bandcamp.com/album/va-grower
