add IframeSize and release-page-content

--- a/_posts/releases/2010-06-15-va-grower.md
+++ b/_posts/releases/2010-06-15-va-grower.md
@@ -9,8 +9,9 @@ filterStyle: chillout
 filterFormat: compilation
 cover: true
 cat_no: sencd018
+tracks_no: 12
 
-bandcamp-id: 4231998669
+bandcamp_id: 4231998669
 bandcamp: https://lookinglook.bandcamp.com/album/va-grower
 ektoplazm: http://www.ektoplazm.com/free-music/grower
 discogs: http://www.discogs.com/Various-Grower/release/2356268
@@ -22,6 +23,7 @@ This new release mixed different styles: from classic chill-out with ambient to 
 
 The compilation includes tracks as well-known projects, such as: Overdream (Ukraine), Spectrum Vision (Russia), Vonoom (Denmark), Irukanji (Ukraine), Kalpataru Tree (USA), Unusual Cosmic Process (Ukraine); and 'newcomers', such as: Atati (Ukraine), Mahaon & Locus (Russia), E.R.S. (India), ShizoLizer Gin (Ukraine), Xylonite (Russia), Liquid Crystal (Russia).
 
+---
 Tracklist:
 
 01. Atati - Versions [60bpm]
