--- a/_posts/releases/2017-03-01-va-the-ten.md
+++ b/_posts/releases/2017-03-01-va-the-ten.md
@@ -9,8 +9,9 @@ filterStyle: chillout
 filterFormat: compilation
 cover: true
 cat_no: sencd024
+tracks_no: 10
 
-bandcamp-id: 
+bandcamp_id: 
 bandcamp: https://sentimony.bandcamp.com/album/va-the-ten
 ektoplazm: 
 discogs: 
