add og-image cell

--- a/_posts/releases/2010-06-15-va-grower.md
+++ b/_posts/releases/2010-06-15-va-grower.md
@@ -15,6 +15,10 @@ bandcamp_id: 4231998669
 bandcamp: https://lookinglook.bandcamp.com/album/va-grower
 ektoplazm: http://www.ektoplazm.com/free-music/grower
 discogs: http://www.discogs.com/Various-Grower/release/2356268
+
+og-image: 
+artwork_by: 
+mastered_by: 
 ---
 
 Lookinglook Records team is pleased to presents our second release - chill-out compialtion, titled «Grower».
