--- a/_posts/releases/2017-03-01-va-the-ten.md
+++ b/_posts/releases/2017-03-01-va-the-ten.md
@@ -15,6 +15,10 @@ bandcamp_id:
 bandcamp: https://sentimony.bandcamp.com/album/va-the-ten
 ektoplazm: 
 discogs: 
+
+og-image: 
+artwork_by: 
+mastered_by: 
 ---
 
 Tracklist:
