add more credits at releases

--- a/_posts/releases/2010-06-15-va-grower.md
+++ b/_posts/releases/2010-06-15-va-grower.md
@@ -10,15 +10,17 @@ filterFormat: compilation
 cover: true
 cat_no: sencd018
 tracks_no: 12
+coming_soon: 
 
 bandcamp_id: 4231998669
-bandcamp: https://lookinglook.bandcamp.com/album/va-grower
-ektoplazm: http://www.ektoplazm.com/free-music/grower
-discogs: http://www.discogs.com/Various-Grower/release/2356268
+link_bandcamp: https://lookinglook.bandcamp.com/album/va-grower
+link_ektoplazm: http://www.ektoplazm.com/free-music/grower
+link_discogs: http://www.discogs.com/Various-Grower/release/2356268
+coming_soon: 
 
-og-image: 
-artwork_by: 
-mastered_by: 
+compiled_by: Irukanji
+artwork_by: Ju Ju
+mastered_by: Overdream Studio http://overdreamstudio.com
 ---
 
 Lookinglook Records team is pleased to presents our second release - chill-out compialtion, titled «Grower».
