--- a/_posts/releases/2017-03-01-va-the-ten.md
+++ b/_posts/releases/2017-03-01-va-the-ten.md
@@ -10,17 +10,24 @@ filterFormat: compilation
 cover: true
 cat_no: sencd024
 tracks_no: 10
+coming_soon: true
 
 bandcamp_id: 
-bandcamp: https://sentimony.bandcamp.com/album/va-the-ten
-ektoplazm: 
-discogs: 
+link_bandcamp: https://sentimony.bandcamp.com/album/va-the-ten
+link_ektoplazm: 
+link_discogs: 
+coming_soon: 
 
-og-image: 
-artwork_by: 
-mastered_by: 
+compiled_by: Irukanji
+artwork_by: Trootootoo https://www.facebook.com/andytrootootoo
+mastered_by: Overdream Studio http://overdreamstudio.com
 ---
 
+After a few years of silence, Sentimony Records is ready to presents you a new psychill compilation dedicated to the tenth anniversary of the label.
+
+Enjoy!
+
+---
 Tracklist:
 
 01. Zymosis feat. Katya Chilly - U Zemli
