rework artwork-in-progress

--- a/_posts/releases/2010-06-15-va-grower.md
+++ b/_posts/releases/2010-06-15-va-grower.md
@@ -16,11 +16,10 @@ bandcamp_id: 4231998669
 link_bandcamp: https://lookinglook.bandcamp.com/album/va-grower
 link_ektoplazm: http://www.ektoplazm.com/free-music/grower
 link_discogs: http://www.discogs.com/Various-Grower/release/2356268
-coming_soon: 
 
-compiled_by: Irukanji
-artwork_by: Ju Ju
-mastered_by: Overdream Studio http://overdreamstudio.com
+compiled_by: <a href='https://irukanji-music.com' target='_blank'>Irukanji</a>
+artwork_by: <a href='https://messdivision.com' target='_blank'>Ju Ju</a>
+mastered_by: <a href='http://overdreamstudio.com' target='_blank'>Overdream Studio</a>
 ---
 
 Lookinglook Records team is pleased to presents our second release - chill-out compialtion, titled «Grower».
