--- a/_posts/releases/2017-03-01-va-the-ten.md
+++ b/_posts/releases/2017-03-01-va-the-ten.md
@@ -16,16 +16,17 @@ bandcamp_id:
 link_bandcamp: https://sentimony.bandcamp.com/album/va-the-ten
 link_ektoplazm: 
 link_discogs: 
-coming_soon: 
 
-compiled_by: Irukanji
-artwork_by: Trootootoo https://www.facebook.com/andytrootootoo
-mastered_by: Overdream Studio http://overdreamstudio.com
+compiled_by: <a href='https://irukanji-music.com' target='_blank'>Irukanji</a>
+artwork_by: <a href='https://www.facebook.com/andytrootootoo' target='_blank'>Trootootoo</a>
+mastered_by: <a href='http://overdreamstudio.com' target='_blank'>Overdream Studio</a>
 ---
 
-After a few years of silence, Sentimony Records is ready to presents you a new psychill compilation dedicated to the tenth anniversary of the label.
+Specially for The Tenth Label Birthday, Sentimony Records ready to presents a new psychill compilation «The Ten».
 
-Enjoy!
+Here your will find The Ten exciting journeys by The Ten well-tried psychill minds cearfully selected by Irukanji.
+
+Have a nice trip!
 
 ---
 Tracklist:
