upd share buttons styles

--- a/_posts/releases/2010-06-15-va-grower.md
+++ b/_posts/releases/2010-06-15-va-grower.md
@@ -4,9 +4,9 @@ permalink: /release/va-grower/
 category: releases
 
 title: VA «Grower»
-filterLabel: lookinglook
-filterStyle: chillout
-filterFormat: compilation
+label: lookinglook
+style: psychill
+format: compilation
 cover: true
 cat_no: sencd018
 tracks_no: 12
