--- a/_posts/releases/2017-03-01-va-the-ten.md
+++ b/_posts/releases/2017-03-01-va-the-ten.md
@@ -4,9 +4,9 @@ permalink: /release/va-the-ten/
 category: releases
 
 title: 'VA «The Ten»'
-filterLabel: sentimony
-filterStyle: chillout
-filterFormat: compilation
+label: sentimony
+style: psychill
+format: compilation
 cover: true
 cat_no: sencd024
 tracks_no: 10
