add popular, add flex-sticky, global cleaning

--- a/_posts/events/2009-11-21-alt-space.md
+++ b/_posts/events/2009-11-21-alt-space.md
@@ -1,9 +1,9 @@
 ---
-layout: event-page
+layout: post
 permalink: /event/alt-space/
 category: events
 
-fb-link: 
-psyshine-link: http://forum.psyshine.org.ua/viewtopic.php?t=7036
+facebook_link: 
+psyshine_link: http://forum.psyshine.org.ua/viewtopic.php?t=7036
 ---
 
