--- a/_posts/releases/2010-06-15-va-grower.md
+++ b/_posts/releases/2010-06-15-va-grower.md
@@ -11,6 +11,7 @@ cover: true
 cat_no: sencd018
 tracks_no: 12
 coming_soon: 
+popular: 
 
 bandcamp_id: 4231998669
 link_bandcamp: https://lookinglook.bandcamp.com/album/va-grower
