--- a/_posts/releases/2017-03-01-va-the-ten.md
+++ b/_posts/releases/2017-03-01-va-the-ten.md
@@ -11,6 +11,7 @@ cover: true
 cat_no: sencd024
 tracks_no: 10
 coming_soon: true
+popular: 
 
 bandcamp_id: 
 link_bandcamp: https://sentimony.bandcamp.com/album/va-the-ten
@@ -22,9 +23,9 @@ artwork_by: <a href='https://www.facebook.com/andytrootootoo' target='_blank'>Tr
 mastered_by: <a href='http://overdreamstudio.com' target='_blank'>Overdream Studio</a>
 ---
 
-Specially for The Tenth Label Birthday, Sentimony Records ready to presents a new psychill compilation «The Ten».
+Specially for The Tenth Label Birthday, Sentimony Records team ready to presents a new psychill compilation «The Ten».
 
-Here your will find The Ten exciting journeys by The Ten well-tried psychill minds cearfully selected by Irukanji.
+Here your will find The Ten exciting journeys by The Ten well-tried psychill minds carefully selected by Irukanji.
 
 Have a nice trip!
 
