rework IframeSize via case, add more news

--- a/_posts/events/2009-11-21-alt-space.md
+++ b/_posts/events/2009-11-21-alt-space.md
@@ -3,6 +3,7 @@ layout: post
 permalink: /event/alt-space/
 category: events
 
+title: 'Sentimony: Alt Space'
 facebook_link: 
 psyshine_link: http://forum.psyshine.org.ua/viewtopic.php?t=7036
 ---
