--- a/_posts/artists/0001-01-01-irukanji.md
+++ b/_posts/artists/0001-01-01-irukanji.md
@@ -15,5 +15,5 @@ bandcamp: https://irukanji.bandcamp.com
 facebook: https://www.facebook.com/irukanji.music
 soundcloud: https://soundcloud.com/irukanji-music
 soundcloud-id: 5771025
-discogs: http://www.discogs.com/artist/1375976-Irukanji
+discogs: https://www.discogs.com/artist/1375976-Irukanji
 ---
