--- a/_posts/releases/2017-03-01-va-the-ten.md
+++ b/_posts/releases/2017-03-01-va-the-ten.md
@@ -12,7 +12,7 @@ cat_no: sencd024
 tracks_no: 10
 coming_soon: true
 popular: 
-
+youtube_id: 
 bandcamp_id: 
 link_bandcamp: https://sentimony.bandcamp.com/album/va-the-ten
 link_ektoplazm: 
