--- a/_posts/releases/2010-06-15-va-grower.md
+++ b/_posts/releases/2010-06-15-va-grower.md
@@ -12,7 +12,7 @@ cat_no: sencd018
 tracks_no: 12
 coming_soon: 
 popular: 
-
+youtube_id: 
 bandcamp_id: 4231998669
 link_bandcamp: https://lookinglook.bandcamp.com/album/va-grower
 link_ektoplazm: http://www.ektoplazm.com/free-music/grower
