upd artists category

--- a/_posts/artists/0001-01-01-calamus.md
+++ b/_posts/artists/0001-01-01-calamus.md
@@ -2,14 +2,10 @@
 layout: artist-page
 permalink: /artist/calamus/
 category: artists
-
 title: Calamus
-filterLabel: aquadeep
-filterStyle: darktrance
-
 name: Vasily Sagaydak
 location: Odesa, Ukraine
-
+style: forest psytrance
 website: 
 bandcamp: 
 facebook: 
