--- a/_posts/artists/0001-01-01-harax.md
+++ b/_posts/artists/0001-01-01-harax.md
@@ -2,14 +2,10 @@
 layout: artist-page
 permalink: /artist/harax/
 category: artists
-
 title: Harax
-filterLabel: sentimony
-filterStyle: chillout
-
 name: Denis Botsvin
 location: Kharkov, Ukraine
-
+style: psychill
 website: 
 bandcamp: 
 facebook: https://www.facebook.com/psychillmusic
