--- a/_posts/artists/0001-01-01-irukanji.md
+++ b/_posts/artists/0001-01-01-irukanji.md
@@ -2,14 +2,10 @@
 layout: artist-page
 permalink: /artist/irukanji/
 category: artists
-
 title: Irukanji
-filterLabel: sentimony
-filterStyle: chillout
-
 name: Ihor Orlovskyi
 location: Kyiv, Ukraine
-
+style: psychill, forest psytrance
 website: https://irukanji-music.com
 bandcamp: https://irukanji.bandcamp.com
 facebook: https://www.facebook.com/irukanji.music
