--- a/_posts/artists/0001-01-01-neirula.md
+++ b/_posts/artists/0001-01-01-neirula.md
@@ -2,14 +2,10 @@
 layout: artist-page
 permalink: /artist/neirula/
 category: artists
-
 title: NeiRula
-filterLabel: sentimony
-filterStyle: chillout
-
 name: Yulia Levchenko
 location: Kyiv, Ukraine
-
+style: psychill
 website: 
 bandcamp: 
 facebook: https://www.facebook.com/NeiRula
