--- a/_posts/artists/0001-01-01-shiva3.md
+++ b/_posts/artists/0001-01-01-shiva3.md
@@ -2,14 +2,10 @@
 layout: artist-page
 permalink: /artist/shiva3/
 category: artists
-
 title: Shiva3
-filterLabel: aquadeep
-filterStyle: goatrance
-
 name: Averin Andrey
-location: Crimea, Ukraine
-
+location: Kyiv, Ukraine
+style: psytrance
 website: 
 bandcamp: 
 facebook: https://www.facebook.com/ShivaOmArtist
