--- a/_posts/artists/0001-01-01-solcast.md
+++ b/_posts/artists/0001-01-01-solcast.md
@@ -2,14 +2,10 @@
 layout: artist-page
 permalink: /artist/solcast/
 category: artists
-
 title: Solcast
-filterLabel: sentimony
-filterStyle: chillout
-
 name: Valeriy Kuznetsov & Konstantin Savchenko
 location: Kharkov, Ukraine
-
+style: psychill
 website: 
 bandcamp: 
 facebook: 
