--- a/_posts/releases/2017-03-01-va-the-ten.md
+++ b/_posts/releases/2017-03-01-va-the-ten.md
@@ -2,7 +2,6 @@
 layout: release-page
 permalink: /release/va-the-ten/
 category: releases
-
 title: 'VA «The Ten»'
 label: sentimony
 style: psychill
@@ -12,12 +11,11 @@ cat_no: sencd024
 tracks_no: 10
 coming_soon: true
 popular: 
-youtube_id: 
+youtube_id: JlH5YyaPkzQ&list=PLp2GaPnw5O3MM1mWFvfVOKf35NKCJHEhk
 bandcamp_id: 
 link_bandcamp: https://sentimony.bandcamp.com/album/va-the-ten
 link_ektoplazm: 
 link_discogs: 
-
 compiled_by: <a href='https://irukanji-music.com' target='_blank'>Irukanji</a>
 artwork_by: <a href='https://www.facebook.com/andytrootootoo' target='_blank'>Trootootoo</a>
 mastered_by: <a href='http://overdreamstudio.com' target='_blank'>Overdream Studio</a>
