--- a/_posts/releases/2017-04-12-va-the-ten.md
+++ b/_posts/releases/2017-04-12-va-the-ten.md
@@ -9,7 +9,7 @@ format: compilation
 cover: true
 cat_no: sencd024
 tracks_no: 10
-coming_soon: 
+coming_soon: true
 popular: true
 youtube_id: JlH5YyaPkzQ&list=PLp2GaPnw5O3MM1mWFvfVOKf35NKCJHEhk
 bandcamp_id: 1710048583
