add cat_nu & rework link_discogs

--- a/_posts/releases/2010-06-15-va-grower.md
+++ b/_posts/releases/2010-06-15-va-grower.md
@@ -8,6 +8,7 @@ style: psychill
 format: compilation
 cover: true
 cat_no: sencd018
+cat_nu: sencd018/lgcd02
 tracks_no: 12
 coming_soon: 
 popular: 
@@ -15,7 +16,7 @@ youtube_id: 0_KTyCON5Hw&list=PLp2GaPnw5O3OeeTCsMzapg-teocv3XDnT
 bandcamp_id: 4231998669
 link_bandcamp: https://lookinglook.bandcamp.com/album/va-grower
 link_ektoplazm: http://www.ektoplazm.com/free-music/grower
-link_discogs: http://www.discogs.com/Various-Grower/release/2356268
+link_discogs: 339908
 compiled_by: <a href='https://irukanji-music.com' target='_blank'>Irukanji</a>
 artwork_by: <a href='https://messdivision.com' target='_blank'>Ju Ju</a>
 mastered_by: <a href='http://overdreamstudio.com' target='_blank'>Overdream Studio</a>
