bandcamp links rework: aquadeep, lookinglook => sentimony

--- a/_posts/releases/2010-06-15-va-grower.md
+++ b/_posts/releases/2010-06-15-va-grower.md
@@ -14,7 +14,7 @@ coming_soon:
 popular: 
 youtube_id: 0_KTyCON5Hw&list=PLp2GaPnw5O3OeeTCsMzapg-teocv3XDnT
 bandcamp_id: 4231998669
-link_bandcamp: https://lookinglook.bandcamp.com/album/va-grower
+link_bandcamp: https://sentimony.bandcamp.com/album/va-grower
 link_ektoplazm: http://www.ektoplazm.com/free-music/grower
 link_discogs: 339908
 compiled_by: <a href='https://irukanji-music.com' target='_blank'>Irukanji</a>
