upd ReleasePage, add music style/genre

--- a/_posts/releases/2010-06-15-va-grower.md
+++ b/_posts/releases/2010-06-15-va-grower.md
@@ -8,7 +8,7 @@ style: psychill
 format: compilation
 cover: true
 cat_no: sencd018
-cat_nu: sencd018/lgcd02
+cat_nu: sencd018 lgcd02
 tracks_no: 12
 coming_soon: 
 popular: 
