--- a/_posts/releases/2017-04-13-va-the-ten.md
+++ b/_posts/releases/2017-04-13-va-the-ten.md
@@ -17,7 +17,7 @@ bandcamp_id: 1710048583
 link_bandcamp: https://sentimony.bandcamp.com/album/va-the-ten
 link_ektoplazm: 
 link_discogs: 1164819
-compiled_by: <a href='https://irukanji-music.com' target='_blank'>Irukanji</a>
+compiled_by: <a href='/artist/irukanji'>Irukanji</a>
 artwork_by: <a href='https://www.facebook.com/andytrootootoo' target='_blank'>Trootootoo</a>
 mastered_by: <a href='http://overdreamstudio.com' target='_blank'>Overdream Studio</a>
 ---
