--- a/_posts/releases/2017-04-13-va-the-ten.md
+++ b/_posts/releases/2017-04-13-va-the-ten.md
@@ -31,13 +31,13 @@ Have a nice trip!
 ---
 Tracklist:
 
-01. Zymosis feat. Katya Chilly - U Zemli
-02. Dagas - Age Of Aquarius
-03. Hair! - Hashish (Capsula Remix)
-04. Spectrum Vision - Mono Town
-05. AstroPilot - Breath Of Fate
-06. Crystal Vibe - Neuron
-07. Chronos - Cultural Legacy (Live Version)
-08. Overdream - Flat Earthers
-09. Daoine Sidhe - Horizon Shifter
-10. Irukanji - Clooney
+01. Zymosis feat. Katya Chilly - U Zemli [140bpm]
+02. Dagas - Age Of Aquarius [60-120bpm]
+03. Hair! - Hashish (Capsula Remix) [99.5bpm]
+04. Spectrum Vision - Mono Town [90bpm]
+05. AstroPilot - Breath Of Fate [102bpm]
+06. Crystal Vibe - Neuron [111bpm]
+07. Chronos - Cultural Legacy (Live Version) [110bpm]
+08. Overdream - Flat Earthers [113bpm]
+09. Daoine Sidhe - Horizon Shifter [115bpm]
+10. Irukanji - Clooney [125bpm]
