upd hero & releases content

--- a/_posts/releases/2010-06-15-va-grower.md
+++ b/_posts/releases/2010-06-15-va-grower.md
@@ -4,7 +4,7 @@ permalink: /release/va-grower/
 category: releases
 title: VA «Grower»
 label: lookinglook
-style: psychill
+style: Psychill
 format: compilation
 cover: true
 cat_no: sencd018
