--- a/_posts/releases/2017-04-13-va-the-ten.md
+++ b/_posts/releases/2017-04-13-va-the-ten.md
@@ -4,7 +4,7 @@ permalink: /release/va-the-ten/
 category: releases
 title: 'VA «The Ten»'
 label: sentimony
-style: psychill
+style: Psychill, Chillgressive
 format: compilation
 cover: true
 cat_no: sencd024
