upd artist-page

--- a/_posts/artists/0001-01-01-irukanji.md
+++ b/_posts/artists/0001-01-01-irukanji.md
@@ -11,5 +11,6 @@ bandcamp: https://irukanji.bandcamp.com
 facebook: https://www.facebook.com/irukanji.music
 soundcloud: https://soundcloud.com/irukanji-music
 soundcloud-id: 5771025
+youtube_id: jH5ahLTEVa8?list=PLp2GaPnw5O3MzxR4EF6nsV8ETCGoyUA_e
 discogs: https://www.discogs.com/artist/1375976-Irukanji
 ---
