--- a/_posts/artists/0001-01-01-neirula.md
+++ b/_posts/artists/0001-01-01-neirula.md
@@ -11,5 +11,6 @@ bandcamp:
 facebook: https://www.facebook.com/NeiRula
 soundcloud: https://soundcloud.com/dj-zea
 soundcloud-id: 542110
+youtube_id: 
 discogs: 
 ---
