--- a/_posts/artists/0001-01-01-shiva3.md
+++ b/_posts/artists/0001-01-01-shiva3.md
@@ -11,5 +11,6 @@ bandcamp:
 facebook: https://www.facebook.com/ShivaOmArtist
 soundcloud: https://soundcloud.com/shiva3
 soundcloud-id: 3035661
+youtube_id: 
 discogs: 
 ---
