--- a/_posts/artists/0001-01-01-zymosis.md
+++ b/_posts/artists/0001-01-01-zymosis.md
@@ -6,10 +6,11 @@ title: Zymosis
 name: 
 location: Kyiv, Ukraine
 style: psychill
-website: 
-bandcamp: 
-facebook: 
-soundcloud: 
-soundcloud-id: 
-discogs: 
+website: http://zymosis.info
+bandcamp: https://zymosis.bandcamp.com
+facebook: https://www.facebook.com/Zymosis.project
+soundcloud: https://soundcloud.com/zymosis
+soundcloud-id: 844489
+youtube_id: PLp2GaPnw5O3MWPpPY_-yzMN43PdBs3f96
+discogs: https://www.discogs.com/artist/588937-Zymosis
 ---
