--- a/_posts/artists/0001-01-01-harax.md
+++ b/_posts/artists/0001-01-01-harax.md
@@ -11,5 +11,6 @@ bandcamp:
 facebook: https://www.facebook.com/psychillmusic
 soundcloud: 
 soundcloud-id: 
+youtube_id: 
 discogs: https://www.discogs.com/artist/751790-Harax
 ---
