--- a/_posts/artists/0001-01-01-calamus.md
+++ b/_posts/artists/0001-01-01-calamus.md
@@ -3,6 +3,7 @@ layout: artist-page
 permalink: /artist/calamus/
 category: artists
 title: Calamus
+photo_cover: 
 name: Vasily Sagaydak
 location: Odesa, Ukraine
 style: forest psytrance
