--- a/_posts/artists/0001-01-01-capsula.md
+++ b/_posts/artists/0001-01-01-capsula.md
@@ -3,6 +3,7 @@ layout: artist-page
 permalink: /artist/capsula/
 category: artists
 title: Capsula
+photo_cover: 
 name: 
 location: 
 style: psychill
