--- a/_posts/artists/0001-01-01-chronos.md
+++ b/_posts/artists/0001-01-01-chronos.md
@@ -3,6 +3,7 @@ layout: artist-page
 permalink: /artist/chronos/
 category: artists
 title: Chronos
+photo_cover: 
 name: 
 location: 
 style: psychill
