--- a/_posts/artists/0001-01-01-harax.md
+++ b/_posts/artists/0001-01-01-harax.md
@@ -3,6 +3,7 @@ layout: artist-page
 permalink: /artist/harax/
 category: artists
 title: Harax
+photo_cover: 
 name: Denis Botsvin
 location: Kharkov, Ukraine
 style: psychill
