--- a/_posts/artists/0001-01-01-neirula.md
+++ b/_posts/artists/0001-01-01-neirula.md
@@ -3,6 +3,7 @@ layout: artist-page
 permalink: /artist/neirula/
 category: artists
 title: NeiRula
+photo_cover: 
 name: Yulia Levchenko
 location: Kyiv, Ukraine
 style: psychill
