--- a/_posts/artists/0001-01-01-senzar.md
+++ b/_posts/artists/0001-01-01-senzar.md
@@ -3,6 +3,7 @@ layout: artist-page
 permalink: /artist/senzar/
 category: artists
 title: Senzar
+photo_cover: 
 name: 
 location: 
 style: psychill
