--- a/_posts/artists/0001-01-01-shiva3.md
+++ b/_posts/artists/0001-01-01-shiva3.md
@@ -3,6 +3,7 @@ layout: artist-page
 permalink: /artist/shiva3/
 category: artists
 title: Shiva3
+photo_cover: 
 name: Averin Andrey
 location: Kyiv, Ukraine
 style: psytrance
