--- a/_posts/artists/0001-01-01-solcast.md
+++ b/_posts/artists/0001-01-01-solcast.md
@@ -3,6 +3,7 @@ layout: artist-page
 permalink: /artist/solcast/
 category: artists
 title: Solcast
+photo_cover: 
 name: Valeriy Kuznetsov & Konstantin Savchenko
 location: Kharkov, Ukraine
 style: psychill
