--- a/_posts/artists/0001-01-01-sygnals.md
+++ b/_posts/artists/0001-01-01-sygnals.md
@@ -3,6 +3,7 @@ layout: artist-page
 permalink: /artist/sygnals/
 category: artists
 title: Sygnals
+photo_cover: 
 name: 
 location: 
 style: psychill
