--- a/_posts/artists/0001-01-01-tentura.md
+++ b/_posts/artists/0001-01-01-tentura.md
@@ -3,6 +3,7 @@ layout: artist-page
 permalink: /artist/tentura/
 category: artists
 title: Tentura
+photo_cover: 
 name: 
 location: Kyiv, Ukraine
 style: psychill
