--- a/_posts/artists/0001-01-01-ufomatka.md
+++ b/_posts/artists/0001-01-01-ufomatka.md
@@ -3,6 +3,7 @@ layout: artist-page
 permalink: /artist/ufomatka/
 category: artists
 title: Ufomatka
+photo_cover: 
 name: 
 location: Kyiv, Ukraine
 style: goatrance
