--- a/_posts/artists/0001-01-01-vonoom.md
+++ b/_posts/artists/0001-01-01-vonoom.md
@@ -3,6 +3,7 @@ layout: artist-page
 permalink: /artist/vonoom/
 category: artists
 title: Vonoom
+photo_cover: 
 name: 
 location: 
 style: psychill
