--- a/_posts/artists/0001-01-01-zymosis.md
+++ b/_posts/artists/0001-01-01-zymosis.md
@@ -3,6 +3,7 @@ layout: artist-page
 permalink: /artist/zymosis/
 category: artists
 title: Zymosis
+photo_cover: 
 name: 
 location: Kyiv, Ukraine
 style: psychill
