--- a/_posts/artists/0001-01-01-chronos.md
+++ b/_posts/artists/0001-01-01-chronos.md
@@ -3,15 +3,15 @@ layout: artist-page
 permalink: /artist/chronos/
 category: artists
 title: Chronos
-photo_cover: 
-name: 
-location: 
+photo_cover: https://scontent-fra3-1.xx.fbcdn.net/v/t1.0-9/12670456_10153514548428237_2321832387671281020_n.jpg?oh=b28f31763daa2124102e6f80acce7bea&oe=5981FE7A
+name: Nick Klimenko
+location: Moscow, Russian Federation
 style: psychill
-website: 
-bandcamp: 
-facebook: 
-soundcloud: 
-soundcloud-id: 
-youtube_id: 
-discogs: 
+website: http://chronos-music.ru
+bandcamp: https://chronosmusic.bandcamp.com
+facebook: https://www.facebook.com/chronosproject
+soundcloud: https://soundcloud.com/chronosproject
+soundcloud-id: 3400685
+youtube_id: PLp2GaPnw5O3MAmokB3C_1XRG8QNGVBmur
+discogs: https://www.discogs.com/artist/503097-Chronos-4
 ---
