--- a/_posts/artists/0001-01-01-zymosis.md
+++ b/_posts/artists/0001-01-01-zymosis.md
@@ -3,8 +3,8 @@ layout: artist-page
 permalink: /artist/zymosis/
 category: artists
 title: Zymosis
-photo_cover: 
-name: 
+photo_cover: https://scontent-fra3-1.xx.fbcdn.net/v/t1.0-9/12075009_10153360873443303_7172062879670128176_n.jpg?oh=8229749cb0c0936f795cf071bede688e&oe=5991369C
+name: Dmitriy Lihachov
 location: Kyiv, Ukraine
 style: psychill
 website: http://zymosis.info
