--- a/_posts/artists/0001-01-01-dagas.md
+++ b/_posts/artists/0001-01-01-dagas.md
@@ -3,15 +3,15 @@ layout: artist-page
 permalink: /artist/dagas/
 category: artists
 title: Dagas
-photo_cover: 
-name: 
-location: 
+photo_cover: https://scontent-fra3-1.xx.fbcdn.net/v/t1.0-9/10574470_10152178271795807_8041256690801616792_n.jpg?oh=a3e7450c61e1d82401c3af7beeb9473a&oe=59873816
+name: Osvaldo Quintero
+location: Panama City, Panam
 style: psychill
 website: 
-bandcamp: 
-facebook: 
-soundcloud: 
-soundcloud-id: 
-youtube_id: 
-discogs: 
+bandcamp: https://kitsch1.bandcamp.com
+facebook: https://www.facebook.com/kitschband
+soundcloud: https://soundcloud.com/dagas
+soundcloud-id: 572413
+youtube_id: PLp2GaPnw5O3P15cZcroKKlSep15vF6BPe
+discogs: https://www.discogs.com/artist/1092964-Dagas
 ---
