--- a/_posts/artists/0001-01-01-capsula.md
+++ b/_posts/artists/0001-01-01-capsula.md
@@ -1,4 +1,4 @@
----
+Psychill---
 layout: artist-page
 permalink: /artist/capsula/
 category: artists
@@ -6,7 +6,7 @@ title: Capsula
 photo_cover: 
 name: 
 location: 
-style: psychill
+style: Psychill
 website: 
 bandcamp: 
 facebook: 
