--- a/_posts/artists/0001-01-01-chronos.md
+++ b/_posts/artists/0001-01-01-chronos.md
@@ -6,7 +6,7 @@ title: Chronos
 photo_cover: https://scontent-fra3-1.xx.fbcdn.net/v/t1.0-9/12670456_10153514548428237_2321832387671281020_n.jpg?oh=b28f31763daa2124102e6f80acce7bea&oe=5981FE7A
 name: Nick Klimenko
 location: Moscow, Russian Federation
-style: psychill
+style: Psychill
 website: http://chronos-music.ru
 bandcamp: https://chronosmusic.bandcamp.com
 facebook: https://www.facebook.com/chronosproject
