--- a/_posts/artists/0001-01-01-harax.md
+++ b/_posts/artists/0001-01-01-harax.md
@@ -6,7 +6,7 @@ title: Harax
 photo_cover: 
 name: Denis Botsvin
 location: Kharkov, Ukraine
-style: psychill
+style: Psychill
 website: 
 bandcamp: 
 facebook: https://www.facebook.com/psychillmusic
