--- a/_posts/artists/0001-01-01-neirula.md
+++ b/_posts/artists/0001-01-01-neirula.md
@@ -6,7 +6,7 @@ title: NeiRula
 photo_cover: 
 name: Yulia Levchenko
 location: Kyiv, Ukraine
-style: psychill
+style: Psychill
 website: 
 bandcamp: 
 facebook: https://www.facebook.com/NeiRula
