--- a/_posts/artists/0001-01-01-solcast.md
+++ b/_posts/artists/0001-01-01-solcast.md
@@ -6,7 +6,7 @@ title: Solcast
 photo_cover: 
 name: Valeriy Kuznetsov & Konstantin Savchenko
 location: Kharkov, Ukraine
-style: psychill
+style: Psychill
 website: 
 bandcamp: 
 facebook: 
