--- a/_posts/artists/0001-01-01-dagas.md
+++ b/_posts/artists/0001-01-01-dagas.md
@@ -6,7 +6,7 @@ title: Dagas
 photo_cover: https://scontent-fra3-1.xx.fbcdn.net/v/t1.0-9/10574470_10152178271795807_8041256690801616792_n.jpg?oh=a3e7450c61e1d82401c3af7beeb9473a&oe=59873816
 name: Osvaldo Quintero
 location: Panama City, Panam
-style: psychill
+style: Psychill
 website: 
 bandcamp: https://kitsch1.bandcamp.com
 facebook: https://www.facebook.com/kitschband
