--- a/_posts/artists/0001-01-01-irukanji.md
+++ b/_posts/artists/0001-01-01-irukanji.md
@@ -6,7 +6,7 @@ title: Irukanji
 photo_cover: https://scontent-fra3-1.xx.fbcdn.net/v/t31.0-8/15288478_10154758447464450_1024029027675474473_o.jpg?oh=2bb5318b4fd9f9d88f0a062b27c272e6&oe=598722BB
 name: Ihor Orlovskyi
 location: Kyiv, Ukraine
-style: psychill, forest psytrance
+style: Psychill, Forest Psytrance
 website: https://irukanji-music.com
 bandcamp: https://irukanji.bandcamp.com
 facebook: https://www.facebook.com/irukanji.music
