add discogs links at artists

--- a/_posts/artists/0032-01-01-calamus.md
+++ b/_posts/artists/0032-01-01-calamus.md
@@ -13,5 +13,5 @@ facebook:
 soundcloud: https://soundcloud.com/calamus_treetrolla
 soundcloud-id: 3383071
 youtube_id: 
-discogs: 
+discogs: https://www.discogs.com/artist/549097-Calamus
 ---
