--- a/_posts/artists/0033-01-01-shiva3.md
+++ b/_posts/artists/0033-01-01-shiva3.md
@@ -13,5 +13,5 @@ facebook: https://www.facebook.com/ShivaOmArtist
 soundcloud: https://soundcloud.com/shiva3
 soundcloud-id: 3035661
 youtube_id: 
-discogs: 
+discogs: https://www.discogs.com/artist/1276953-Shiva3
 ---
