--- a/_posts/artists/0041-01-01-vonoom.md
+++ b/_posts/artists/0041-01-01-vonoom.md
@@ -1,8 +1,8 @@
 ---
 layout: artist-page
-permalink: /artist/flooting-grooves/
+permalink: /artist/vonoom/
 category: artists
-title: Flooting Grooves
+title: Vonoom
 photo_cover: 
 name: 
 location: 
@@ -13,5 +13,5 @@ facebook:
 soundcloud: 
 soundcloud-id: 
 youtube_id: 
-discogs: 
+discogs: https://www.discogs.com/artist/1646258-Vonoom
 ---
