--- a/_posts/artists/0057-01-01-sygnals.md
+++ b/_posts/artists/0057-01-01-sygnals.md
@@ -1,8 +1,8 @@
-Psychill---
+---
 layout: artist-page
-permalink: /artist/capsula/
+permalink: /artist/sygnals/
 category: artists
-title: Capsula
+title: Sygnals
 photo_cover: 
 name: 
 location: 
@@ -13,5 +13,5 @@ facebook:
 soundcloud: 
 soundcloud-id: 
 youtube_id: 
-discogs: 
+discogs: https://www.discogs.com/artist/1954663-Sygnals
 ---
