--- a/_posts/artists/0064-01-01-ufomatka.md
+++ b/_posts/artists/0064-01-01-ufomatka.md
@@ -1,17 +1,17 @@
 ---
 layout: artist-page
-permalink: /artist/tentura/
+permalink: /artist/ufomatka/
 category: artists
-title: Tentura
+title: Ufomatka
 photo_cover: 
 name: 
 location: Kyiv, Ukraine
-style: Psychill
+style: goatrance
 website: 
 bandcamp: 
 facebook: 
 soundcloud: 
 soundcloud-id: 
 youtube_id: 
-discogs: 
+discogs: https://www.discogs.com/artist/2001310-Ufomatka
 ---
