--- a/_posts/artists/0084-01-01-tentura.md
+++ b/_posts/artists/0084-01-01-tentura.md
@@ -1,17 +1,17 @@
 ---
 layout: artist-page
-permalink: /artist/ufomatka/
+permalink: /artist/tentura/
 category: artists
-title: Ufomatka
+title: Tentura
 photo_cover: 
 name: 
 location: Kyiv, Ukraine
-style: goatrance
+style: Psychill
 website: 
 bandcamp: 
 facebook: 
 soundcloud: 
 soundcloud-id: 
 youtube_id: 
-discogs: 
+discogs: https://www.discogs.com/artist/1352218-Tentura
 ---
