--- a/_posts/artists/0092-01-01-capsula.md
+++ b/_posts/artists/0092-01-01-capsula.md
@@ -1,8 +1,8 @@
----
+Psychill---
 layout: artist-page
-permalink: /artist/senzar/
+permalink: /artist/capsula/
 category: artists
-title: Senzar
+title: Capsula
 photo_cover: 
 name: 
 location: 
@@ -13,5 +13,5 @@ facebook:
 soundcloud: 
 soundcloud-id: 
 youtube_id: 
-discogs: 
+discogs: https://www.discogs.com/artist/296858-Capsula
 ---
