--- a/_posts/artists/0034-01-01-senzar.md
+++ b/_posts/artists/0034-01-01-senzar.md
@@ -1,8 +1,8 @@
 ---
 layout: artist-page
-permalink: /artist/psyfactor/
+permalink: /artist/senzar/
 category: artists
-title: Psyfactor
+title: Senzar
 photo_cover: 
 name: 
 location: 
@@ -13,5 +13,5 @@ facebook:
 soundcloud: 
 soundcloud-id: 
 youtube_id: 
-discogs: 
+discogs: https://www.discogs.com/artist/469097-Senzar
 ---
