fix some typos in release descriptions

--- a/_posts/artists/0064-01-01-ufomatka.md
+++ b/_posts/artists/0064-01-01-ufomatka.md
@@ -6,7 +6,7 @@ title: Ufomatka
 photo_cover: 
 name: 
 location: Kyiv, Ukraine
-style: goatrance
+style: Goa trance
 website: 
 bandcamp: 
 facebook: 
