--- a/_posts/releases/2010-06-15-va-grower.md
+++ b/_posts/releases/2010-06-15-va-grower.md
@@ -22,7 +22,7 @@ artwork_by: <a href='https://messdivision.com' target='_blank'>Ju Ju</a>
 mastered_by: <a href='http://overdreamstudio.com' target='_blank'>Overdream Studio</a>
 ---
 
-Lookinglook Records team is pleased to presents our second release - chill-out compialtion, titled «Grower».
+Lookinglook Records team is pleased to present our second release - chill-out compilation, titled «Grower».
 
 This new release mixed different styles: from classic chill-out with ambient to dub with downtempo. Tracks smoothly flow into one another and complement each other.
 
