--- a/_posts/releases/2017-04-13-va-the-ten.md
+++ b/_posts/releases/2017-04-13-va-the-ten.md
@@ -22,7 +22,7 @@ artwork_by: <a href='https://www.facebook.com/andytrootootoo' target='_blank'>Tr
 mastered_by: <a href='http://overdreamstudio.com' target='_blank'>Overdream Studio</a>
 ---
 
-Specially for The Tenth Label Birthday, Sentimony Records team ready to presents a new psychill compilation «The Ten».
+Specially for The Tenth Label Birthday, Sentimony Records team is ready to present a new psychill compilation «The Ten».
 
 Here your will find The Ten exciting journeys by The Ten well-tried psychill minds carefully selected by Irukanji.
 
