--- a/_posts/artists/0084-01-01-tentura.md
+++ b/_posts/artists/0084-01-01-tentura.md
@@ -3,15 +3,15 @@ layout: page-artist
 permalink: /artist/tentura/
 category: artists
 title: Tentura
-photo_cover: 
-name: 
+photo_cover: https://scontent-fra3-1.xx.fbcdn.net/v/t1.0-9/562682_269214476516339_2045088094_n.jpg?oh=95bed7f3d1a492c9ec5f8de26c408359&oe=59B36901
+name: Alexandr Pidgornyi
 location: Kyiv, Ukraine
 style: Psychill
 website: 
 bandcamp: 
-facebook: 
-soundcloud: 
-soundcloud-id: 
-youtube_id: 
+facebook: https://www.facebook.com/Tentura.Music
+soundcloud: https://soundcloud.com/tentura
+soundcloud-id: 5604669
+youtube_id: PLp2GaPnw5O3NCMVeOpCE35J1R19Wfl3e1
 discogs: https://www.discogs.com/artist/1352218-Tentura
 ---
