rework soundcloud_id for PageArtist

--- a/_posts/artists/0004-01-01-zymosis.md
+++ b/_posts/artists/0004-01-01-zymosis.md
@@ -11,7 +11,7 @@ website: http://zymosis.info
 bandcamp: https://zymosis.bandcamp.com
 facebook: https://www.facebook.com/Zymosis.project
 soundcloud: https://soundcloud.com/zymosis
-soundcloud-id: 844489
+soundcloud_id: 844489
 youtube_id: PLp2GaPnw5O3MWPpPY_-yzMN43PdBs3f96
 discogs: https://www.discogs.com/artist/588937-Zymosis
 ---
