--- a/_posts/artists/0005-01-01-heinali.md
+++ b/_posts/artists/0005-01-01-heinali.md
@@ -11,7 +11,7 @@ website: http://www.heinali.info
 bandcamp: https://heinali.bandcamp.com
 facebook: https://www.facebook.com/heinali
 soundcloud: https://soundcloud.com/heinali
-soundcloud-id: 105707
+soundcloud_id: 105707
 youtube_id: PLp2GaPnw5O3PYFTojXVoBInGiz1CqptfM
 discogs: https://www.discogs.com/artist/751794-Heinali
 ---
