--- a/_posts/artists/0015-01-01-dagas.md
+++ b/_posts/artists/0015-01-01-dagas.md
@@ -11,7 +11,7 @@ website:
 bandcamp: https://kitsch1.bandcamp.com
 facebook: https://www.facebook.com/kitschband
 soundcloud: https://soundcloud.com/dagas
-soundcloud-id: 572413
+soundcloud_id: 572413
 youtube_id: PLp2GaPnw5O3P15cZcroKKlSep15vF6BPe
 discogs: https://www.discogs.com/artist/1092964-Dagas
 ---
