--- a/_posts/artists/0033-01-01-shiva3.md
+++ b/_posts/artists/0033-01-01-shiva3.md
@@ -11,7 +11,7 @@ website:
 bandcamp: 
 facebook: https://www.facebook.com/ShivaOmArtist
 soundcloud: https://soundcloud.com/shiva3
-soundcloud-id: 3035661
+soundcloud_id: 3035661
 youtube_id: 
 discogs: https://www.discogs.com/artist/1276953-Shiva3
 ---
