--- a/_posts/artists/0057-01-01-sygnals.md
+++ b/_posts/artists/0057-01-01-sygnals.md
@@ -11,7 +11,7 @@ website:
 bandcamp: 
 facebook: 
 soundcloud: 
-soundcloud-id: 
+soundcloud_id: 
 youtube_id: 
 discogs: https://www.discogs.com/artist/1954663-Sygnals
 ---
