--- a/_posts/artists/0084-01-01-tentura.md
+++ b/_posts/artists/0084-01-01-tentura.md
@@ -11,7 +11,7 @@ website:
 bandcamp: 
 facebook: https://www.facebook.com/Tentura.Music
 soundcloud: https://soundcloud.com/tentura
-soundcloud-id: 5604669
+soundcloud_id: 5604669
 youtube_id: PLp2GaPnw5O3NCMVeOpCE35J1R19Wfl3e1
 discogs: https://www.discogs.com/artist/1352218-Tentura
 ---
