--- a/_posts/artists/0014-01-01-chronos.md
+++ b/_posts/artists/0014-01-01-chronos.md
@@ -11,7 +11,7 @@ website: http://chronos-music.ru
 bandcamp: https://chronosmusic.bandcamp.com
 facebook: https://www.facebook.com/chronosproject
 soundcloud: https://soundcloud.com/chronosproject
-soundcloud-id: 3400685
+soundcloud_id: 3400685
 youtube_id: PLp2GaPnw5O3MAmokB3C_1XRG8QNGVBmur
 discogs: https://www.discogs.com/artist/503097-Chronos-4
 ---
