--- a/_posts/artists/0023-01-01-irukanji.md
+++ b/_posts/artists/0023-01-01-irukanji.md
@@ -11,7 +11,7 @@ website: https://irukanji-music.com
 bandcamp: https://irukanji.bandcamp.com
 facebook: https://www.facebook.com/irukanji.music
 soundcloud: https://soundcloud.com/irukanji-music
-soundcloud-id: 5771025
+soundcloud_id: 5771025
 youtube_id: PLp2GaPnw5O3MzxR4EF6nsV8ETCGoyUA_e
 discogs: https://www.discogs.com/artist/1375976-Irukanji
 ---
