--- a/_posts/artists/0024-01-01-neirula.md
+++ b/_posts/artists/0024-01-01-neirula.md
@@ -11,7 +11,7 @@ website:
 bandcamp: 
 facebook: https://www.facebook.com/NeiRula
 soundcloud: https://soundcloud.com/dj-zea
-soundcloud-id: 542110
+soundcloud_id: 542110
 youtube_id: 
 discogs: https://www.discogs.com/artist/1375975-NeiRula
 ---
