--- a/_posts/artists/0032-01-01-calamus.md
+++ b/_posts/artists/0032-01-01-calamus.md
@@ -11,7 +11,7 @@ website:
 bandcamp: 
 facebook: 
 soundcloud: https://soundcloud.com/calamus_treetrolla
-soundcloud-id: 3383071
+soundcloud_id: 3383071
 youtube_id: 
 discogs: https://www.discogs.com/artist/549097-Calamus
 ---
