:fire: add vue-tabs, add juno, add scss variables, upd slogan, cleaning

--- a/_posts/releases/2017-04-13-va-the-ten.md
+++ b/_posts/releases/2017-04-13-va-the-ten.md
@@ -10,17 +10,19 @@ cover: true
 cat_no: sencd024
 cat_nu: sencd024
 tracks_no: 10
+total_time: 
 coming_soon: 
 popular: true
 youtube_id: JlH5YyaPkzQ&list=PLp2GaPnw5O3MM1mWFvfVOKf35NKCJHEhk
 youtube_playlist_id: PLp2GaPnw5O3MM1mWFvfVOKf35NKCJHEhk
 bandcamp_id: 1710048583
 link_bandcamp: https://sentimony.bandcamp.com/album/va-the-ten
+link_junodownload: 
 link_ektoplazm: 
 link_discogs: 1164819
 compiled_by: <a href='/artist/irukanji'>Irukanji</a>
 artwork_by: <a href='https://www.facebook.com/andytrootootoo' target='_blank'>Trootootoo</a>
-mastered_by: <a href='http://overdreamstudio.com' target='_blank'>Overdream Studio</a>
+mastered_by: <a href='http://overdreamstudio.com' target='_blank'>Makus (Overdream Studio)</a>
 ---
 
 Specially for The Tenth Label Birthday, Sentimony Records team is ready to present a new psychill compilation «The Ten».
