--- a/_posts/releases/2010-06-15-va-grower.md
+++ b/_posts/releases/2010-06-15-va-grower.md
@@ -4,23 +4,25 @@ permalink: /release/va-grower/
 category: releases
 title: VA «Grower»
 label: lookinglook
-style: Psychill
+style: Psychill, Psydub
 format: compilation
 cover: true
 cat_no: sencd018
 cat_nu: sencd018 lgcd02
 tracks_no: 12
+total_time: 
 coming_soon: 
 popular: 
 youtube_id: 0_KTyCON5Hw&list=PLp2GaPnw5O3OeeTCsMzapg-teocv3XDnT
 youtube_playlist_id: PLp2GaPnw5O3OeeTCsMzapg-teocv3XDnT
 bandcamp_id: 1678520944
 link_bandcamp: https://sentimony.bandcamp.com/album/va-grower
+link_junodownload: http://www.junodownload.com/products/grower/1606631-02
 link_ektoplazm: http://www.ektoplazm.com/free-music/grower
 link_discogs: 339908
 compiled_by: <a href='https://irukanji-music.com' target='_blank'>Irukanji</a>
 artwork_by: <a href='https://messdivision.com' target='_blank'>Ju Ju</a>
-mastered_by: <a href='http://overdreamstudio.com' target='_blank'>Overdream Studio</a>
+mastered_by: <a href='http://overdreamstudio.com' target='_blank'>Makus (Overdream Studio)</a>
 ---
 
 Lookinglook Records team is pleased to present our second release - chill-out compilation, titled «Grower».
