--- a/_posts/artists/0064-01-01-ufomatka.md
+++ b/_posts/artists/0064-01-01-ufomatka.md
@@ -3,15 +3,15 @@ layout: page-artist
 permalink: /artist/ufomatka/
 category: artists
 title: Ufomatka
-photo_cover: 
-name: 
+photo_cover: https://scontent-frt3-1.xx.fbcdn.net/v/t1.0-9/12472592_1032149250179272_406723084862806739_n.jpg?oh=e004b4f9d242fd255dccad962fe921a1&oe=597B314D
+name: Alexandr Yemelyanov
 location: Kyiv, Ukraine
-style: Goa trance
+style: Goa Trance
 website: 
 bandcamp: 
-facebook: 
-soundcloud: 
-soundcloud_id: 
-youtube_id: 
+facebook: https://www.facebook.com/Ufomatka-167124956686742/
+soundcloud: https://soundcloud.com/alex-ufotrip
+soundcloud_id: 8272354
+youtube_id: PLp2GaPnw5O3PaL0EwuODzXUrD8q7ZR8hu
 discogs: https://www.discogs.com/artist/2001310-Ufomatka
 ---
