--- a/_posts/artists/0004-01-01-zymosis.md
+++ b/_posts/artists/0004-01-01-zymosis.md
@@ -3,7 +3,7 @@ layout: page-artist
 permalink: /artist/zymosis/
 category: artists
 title: Zymosis
-photo_cover: https://scontent-fra3-1.xx.fbcdn.net/v/t1.0-9/12075009_10153360873443303_7172062879670128176_n.jpg?oh=8229749cb0c0936f795cf071bede688e&oe=5991369C
+photo_cover: https://scontent-frx5-1.xx.fbcdn.net/v/t31.0-8/18768421_830975260393165_2614610363443809064_o.jpg?oh=4c3ed86c7f626ca360934f50fab55fc9&oe=59E1AEF9
 name: Dmitriy Lihachov
 location: Kyiv, Ukraine
 style: Psychill
