cleaning & add more artists info :coffee:

--- a/_posts/artists/0092-01-01-capsula.md
+++ b/_posts/artists/0092-01-01-capsula.md
@@ -12,6 +12,6 @@ bandcamp:
 facebook: 
 soundcloud: 
 soundcloud_id: 
-youtube_id: 
+youtube_id: PLp2GaPnw5O3OV4FYuC8t-BAfVSKL5qnPO
 discogs: https://www.discogs.com/artist/296858-Capsula
 ---
