--- a/_posts/artists/0001-01-01-harax.md
+++ b/_posts/artists/0001-01-01-harax.md
@@ -3,15 +3,15 @@ layout: page-artist
 permalink: /artist/harax/
 category: artists
 title: Harax
-photo_cover: 
+photo_cover: https://scontent-frt3-1.xx.fbcdn.net/v/t31.0-8/478099_324941487612703_562367879_o.jpg?oh=34d580ed87067ba6642edb227e4489d6&oe=59E846D7
 name: Denis Botsvin
 location: Kharkov, Ukraine
 style: Psychill
 website: 
 bandcamp: 
 facebook: https://www.facebook.com/psychillmusic
-soundcloud: 
-soundcloud_id: 
-youtube_id: 
+soundcloud: https://soundcloud.com/harax-official
+soundcloud_id: 207055031
+youtube_id: PLp2GaPnw5O3OfKPido2E4p6FEDvwlDcnf
 discogs: https://www.discogs.com/artist/751790-Harax
 ---
